// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`composition hook should return with Stack props 1`] = `
Object {
  "className": "css-17a5cnv css-63it0p css-1qnz8fc bb-Box bb-Stack",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for orientation 1`] = `
@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-0>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0>*:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width: 1024px) {
  .emotion-0.emotion-0.emotion-0>*:not(:last-child) {
    margin-bottom: 2rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.base should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.base should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.horizontal should render correctly 1`] = `
@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-0>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0>*:not(:last-child) {
    margin-right: 2rem;
  }

  .emotion-0>*:not(:last-child) {
    background-color: var(--bb-palette-red, #ff0000);
  }
}

@media screen and (max-width: 1024px) {
  .emotion-0.emotion-0.emotion-0>*:not(:last-child) {
    margin-bottom: 2rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.child.vertical should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.horizontal should render correctly 1`] = `
@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-0>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0>*:not(:last-child) {
    margin-right: 2rem;
  }

  .emotion-0 {
    background-color: var(--bb-palette-red, #ff0000);
  }
}

@media screen and (max-width: 1024px) {
  .emotion-0.emotion-0.emotion-0>*:not(:last-child) {
    margin-bottom: 2rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Stack.vertical should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a horizontal set 1`] = `
@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-0>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0>*:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width: 1024px) {
  .emotion-0.emotion-0.emotion-0>*:not(:last-child) {
    margin-bottom: 2rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a horizontal set with breakpoint 1`] = `
@media screen and (min-width: 1200px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-0>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-0>*:not(:last-child) {
    margin-right: 2rem;
  }
}

@media screen and (max-width: 1200px) {
  .emotion-0.emotion-0.emotion-0>*:not(:last-child) {
    margin-bottom: 2rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of center 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of left 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of right 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of bottom 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of center 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of top 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-4 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.base should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.base should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.horizontal should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.child.vertical should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.horizontal should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Stack.styles.vertical should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Stack"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    world
  </div>
</div>
`;
